--- a/MapOverlayTest2/Park Information/MagicMountainAttractions.plist
+++ b/MapOverlayTest2/Park Information/MagicMountainAttractions.plist
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>Item 0</key>
+<array>
 	<dict>
 		<key>name</key>
 		<string>Goliath</string>
@@ -13,7 +12,6 @@
 		<key>subtitle</key>
 		<string>Intensity: 8/10</string>
 	</dict>
-	<key>Item 1</key>
 	<dict>
 		<key>name</key>
 		<string>Batman</string>
@@ -24,7 +22,6 @@
 		<key>subtitle</key>
 		<string>Intensity: 6/10</string>
 	</dict>
-	<key>Item 2</key>
 	<dict>
 		<key>name</key>
 		<string>Ridler&apos;s Revenge</string>
@@ -35,7 +32,6 @@
 		<key>subtitle</key>
 		<string>Intensity: 6/10</string>
 	</dict>
-	<key>Item 3</key>
 	<dict>
 		<key>name</key>
 		<string>X2</string>
@@ -46,7 +42,6 @@
 		<key>subtitle</key>
 		<string>Intensity: 10/10</string>
 	</dict>
-	<key>Item 4</key>
 	<dict>
 		<key>name</key>
 		<string>Tatsu</string>
@@ -57,7 +52,6 @@
 		<key>subtitle</key>
 		<string>Intensity: 7/10</string>
 	</dict>
-	<key>Item 5</key>
 	<dict>
 		<key>name</key>
 		<string>Panda Express</string>
@@ -68,7 +62,6 @@
 		<key>subtitle</key>
 		<string>Cost: $$</string>
 	</dict>
-	<key>Item 6</key>
 	<dict>
 		<key>name</key>
 		<string>Cold Stone</string>
@@ -79,7 +72,6 @@
 		<key>subtitle</key>
 		<string>Cost: $</string>
 	</dict>
-	<key>Item 7</key>
 	<dict>
 		<key>name</key>
 		<string>First Aid</string>
@@ -90,5 +82,5 @@
 		<key>subtitle</key>
 		<string>Call 911 For Emergency</string>
 	</dict>
-</dict>
+</array>
 </plist>
